--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
+    <script src="scripts/url-router.js" type="module"></script>
 
     <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
