--- a/index.html
+++ b/index.html
@@ -37,11 +37,9 @@
                         <a class="nav-link" href="/login" onclick="route()">Вход</a>
                     </li>
                     <li class="nav-item dropdown navbar-authorized" style="display: none">
-                        <a class="nav-link dropdown-toggle account-name" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Выподающий список
-                        </a>
+                        <a class="nav-link dropdown-toggle account-name" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Профиль</a></li>
+                            <li><a class="dropdown-item" href="/profile" onclick="route()">Профиль</a></li>
                             <li><a class="dropdown-item" href="#">Выйти</a></li>
                         </ul>
                     </li>
@@ -50,7 +48,7 @@
         </div>
     </nav>
 
-    <div class="content mt-5 d-flex align-items-center" id="myContent"></div>
+    <div class="content mt-5 d-flex align-items-center row" id="myContent"></div>
 
     <footer class="footer mt-3">
         <div class="container">
