Добавил логику выхода из аккаунта
Выход на данный момент перенаправляет на страницу /BlogFrontend/index.html, потому что главной страницы пока не существует

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Профиль</a></li>
-                            <li><a class="dropdown-item" href="#">Выйти</a></li>
+                            <li><a class="dropdown-item" id="logout-btn" href="/BlogFrontend/index.html">Выйти</a></li>
                         </ul>
                     </li>
                 </ul>
