--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
     <script src="scripts/url-router.js" type="module"></script>
 
-    <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Блог №415</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
@@ -48,11 +48,11 @@
         </div>
     </nav>
 
-    <div class="content mt-5 d-flex align-items-center row" id="myContent"></div>
+    <div class="content mt-5 row" id="myContent"></div>
 
-    <footer class="footer mt-3">
+    <footer class="footer mt-3 py-3 border-top bg-light">
         <div class="container">
-            <p><span>&copy;</span> 2023 - Блог №415</p>
+            <span><span>&copy;</span> 2023 - Блог №415</span>
         </div>
     </footer>
 </body>
