--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/" onclick="route()">Главная</a>
+                        <a class="nav-link" aria-current="page" href="/">Главная</a>
                     </li>
                     <li class="nav-item authorized d-none">
                         <a class="nav-link" aria-current="page" href="#">Авторы</a>
@@ -35,12 +35,12 @@
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item unauthorized">
-                        <a class="nav-link" href="/login" onclick="route()">Вход</a>
+                        <a class="nav-link" href="/login">Вход</a>
                     </li>
                     <li class="nav-item dropdown authorized d-none">
                         <a class="nav-link dropdown-toggle account-name" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/profile" onclick="route()">Профиль</a></li>
+                            <li><a class="dropdown-item" href="/profile">Профиль</a></li>
                             <li><a class="dropdown-item" id="logout-btn">Выйти</a></li>
                         </ul>
                     </li>
