--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" aria-current="page" href="/">Главная</a>
                     </li>
                     <li class="nav-item authorized d-none">
-                        <a class="nav-link" aria-current="page" href="#">Авторы</a>
+                        <a class="nav-link" aria-current="page" href="/authors">Авторы</a>
                     </li>
                     <li class="nav-item authorized d-none">
                         <a class="nav-link" aria-current="page" href="#">Группы</a>
