--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" aria-current="page" href="/authors">Авторы</a>
                     </li>
                     <li class="nav-item authorized d-none">
-                        <a class="nav-link" aria-current="page" href="#">Группы</a>
+                        <a class="nav-link" aria-current="page" href="/communities">Группы</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
